newsfeed.css
/* Base styles */
html {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
        sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

img {
    width: 100%;
}

a {
    text-decoration: none;
    color: #000;
}

/* Header */
.header {
    width: 100%;
    height: 60px;
    font-size: 14px;
    text-align: center;
    border-bottom: 1px solid #eee;
    margin-bottom: 15px;
}

h1 {
    display: inline-block;
}

.header p {
    display: inline-block;
    font-size: 20px;
    text-transform: uppercase;
}

/* Main section */
.main {
    display: flex;
    flex-direction: column;
    max-width: 1000px;
    margin: 0 auto;  
}

.categoriesCol {
    max-width: 100%;
}

.feedCol {
    max-width: 100%;
}

.cardsContainer {
    margin-bottom: 40px;
}

.cardsContainer p {
    line-height: 1.4;
}

.cardsContainer h1 { 
    margin: 0;
    margin-right: 30px;
    font-size: 22px;
}

.title-container {
    padding-left: 14px; 
    font-size: 12px;
}

.title-container h1 {
    margin: 0;
}

.latest:hover {
    color: #dc3b42;
    cursor: pointer;
}

.latest {
    margin-bottom: 5px;
}

.activeTab {
    color: #000;
}

.card {
    display: flex;
    flex-direction: column;
    background-color: #fff;    
    padding: 15px;
    margin: 0 0 15px 0;
    font-size: 12px;
    transition: all 0.3s ease-in-out;
}

.card:hover {
    border-radius: 10px;
    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
}

.card__img {
    width: 100%;
    height: 260px;
    background-position: center; 
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 15px;
}

.card__body {
    color: #333;
    width: 100%;
    overflow: hidden;
}

.card__body .date {
    display: inline-block;
    padding: 0;
    margin: 10px 0 10px 0;
    font-size: 12px;
}

.card__body h1 {
    display: inline-block;
    margin: 0;
}

.card__body p {
    display: inline-block;
    font-size: 16px;
}

/* Categories */
.categories {
    padding: 0;
}

.categories__container {
    display: -webkit-box; 
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex; 
    display: flex;
    flex-direction: row;
    overflow-y: scroll;
    max-height: 40px;
    padding-left: 8px;
}

ul {
    list-style: none;
    padding: 0;
}

ul li {
    position: relative;
    display: inline-block;
    color: #fff;
    background-color: #dc3b42;
    padding: 5px 25px 8px 25px;
    margin: 5px;
    border-radius: 50px;
    transition: all 0.3s;
}

ul a {
    text-decoration: none;
}

ul li:hover{
    background-color: #a1282e;
    cursor: pointer;
}

ul li span {
    position: absolute;
    right: 8px;
}

.categories h1 { 
    display: inline-block;
    padding-left: 15px;
    margin: 0;
    font-size: 22px;
}

.search-container {
    display: -webkit-box; 
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex; 
    display: flex;
    padding: 0 10px;
    margin-bottom: 20px;
}

.search-container input[type=text] {
    width: 100%;
    border: none;
    padding-left: 5px;
    font-size: 14px;
    border: 1px solid #eee;
    border-radius: 50px;
    padding-left: 10px;
}

.search-container .submit-btn {
    border: none;
    background-color: #eee;
    border-radius: 50px;
    padding: 5px 12px;
    margin-left: 5px;
}

.search-container .submit-btn:hover {
    border: none;
    background-color: #dc3b42;
    border-radius: 50px;
    padding: 5px 12px;
    margin-left: 5px;
    color: #fff;
}

.search-container .submit-btn span {
    display: inline-block;
    font-size: 26px;
    cursor: pointer;
}

/* Footer */
.footerSection {
    display: -webkit-box; 
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex; 
    display: flex;
    justify-content: space-between;
    text-align: center;
    padding: 20px;
    color: #fff;
    background-color: #333;
}

.footer__text {
    font-size: 14px;
}

.signature {
    font-weight: 800;
    color: #dc3b42;
}

/* Breakpoints */

@media only screen and (min-width: 768px) {
    .main {
        flex-direction: row-reverse;
    }

    .header {
        border-bottom: 0;
        margin-bottom: 0;
        height: 70px;
    }

    .categoriesCol {
        max-width: 25%;
    }
    
    .feedCol {
        max-width: 75%;
        min-width: 75%;
        min-height: 100vh;
    }

    .card {
        flex-direction: row;
        max-height: 260px;
    }

    .card__img {
        max-height: 260px;
    }

    .card__body {
        padding: 0 20px;
    }

    .card__body .date {
        margin: 0 0 10px 0;
    }

    .categories {
        padding-left: 15px;
    }

    .categories__container {
        display: inline-block;
        flex-direction: column;
        overflow-y: scroll;
        max-height: 100%;
        padding-left: 0;
    }

    .categories h1 { 
        padding-left: 0px;
    }

    .search-container {
        padding-left: 0;
    }
}

